# Qt

./: .gitignore  README.md
AdtConsistencyCheck/: AdtConsistencyCheckApp.cpp  AdtConsistencyCheckApp.h  AdtConsistencyCheckApp.ui  CMakeLists.txt  DataTypeConsistencyCheck.cpp  DataTypeConsistencyCheck.h  main.cpp  resource.rc
AdtConsistencyCheck/include/: DataTypeConsistencyCheck.h
AdtConsistencyCheck/src/: AdtConsistencyCheckApp.cpp  DataTypeConsistencyCheck.cpp
QtBasicExercice/: .qmake.stash
TCP_Communication/: CMakeLists.txt
TcpFileTransfer/: CMakeLists.txt
VcpkgTest/: CMakeLists.txt  main.cpp
common_utils/: CMakeLists.txt
common_utils/include/CommonUtils/: common_utils.h
common_utils/ports/common-utils/: portfile.cmake  usage  vcpkg.json  自定义vckg-port
common_utils/src/: common_utils.cpp
notepad/: CMakeLists.txt
